--- a/index.html
+++ b/index.html
@@ -11,7 +11,38 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.858</title>
+    <title>Degens Idle: An Incremental Strategy Game with Unique Challenges and Deep Progression</title>
+    <meta name="description" content="Immerse yourself in Degens Idle, the ultimate strategy-based idle game with deep and unique progression systems. Unlock powerful upgrades, navigate intricate prestige layers, and make challenging decisions that shape your journey. No ads, no paywalls—just pure strategic gameplay.">
+    <meta name="keywords" content="Degens Idle, idle game, incremental game, free idle game, no ads game, prestige layers, simulation, strategy, deep progression, unique challenges, strategic gameplay, resource management, RPG elements, upgrade systems, skill tree, incremental strategy, browser game, no paywalls, strategic decision-making, idle RPG, challenging gameplay">
+    <!-- Include the JSON-LD structured data -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "VideoGame",
+            "name": "Degens Idle",
+            "url": "https://www.degensidle.com",
+            "description": "Immerse yourself in Degens Idle, the ultimate strategy-based idle game with deep and unique progression systems. Unlock powerful upgrades, navigate intricate prestige layers, and make challenging decisions that shape your journey. No ads, no paywalls—just pure strategic gameplay.",
+            "genre": ["Idle Game", "Simulation", "Strategy", "RPG", "Incremental Game"],
+            "keywords": "idle game, incremental game, free game, no ads, prestige, simulation, strategy, RPG, deep progression, unique challenges",
+            "publisher": {
+            "@type": "Person",
+            "name": "Sebastian"
+            },
+            "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5.0",
+            "reviewCount": "2000000"
+            },
+            "author": {
+            "@type": "Person",
+            "name": "Sebastian"
+            },
+            "image": "https://www.degensidle.com/imgs/textures/character_icon.jpg",
+            "operatingSystem": ["Windows", "macOS", "Linux", "Android", "iOS"],
+            "applicationCategory": "Game",
+            "datePublished": "2024-08-20"
+        }
+        </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
