--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <input type="text" id="tradeAmount" value="" placeholder="Enter (e.g. 1.5M or 50%)">
                 <p id="tradeRatioDisplay">Trade ratio is 10:1</p>
                 <button id="tradeButton">Trade</button>
-                <button id="tradeTenPercentButton" onclick="tradeTenPercent()">Trade 10%</button>
+                <button id="tradeTenPercentButton">Trade 10%</button>
             </div>
             <div id="purchasedUpgrades">
                 <h2>Purchased Upgrades</h2>
@@ -296,7 +296,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.858</h4>
+            <h4>Degens Idle v0.859</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
