--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.859</h4>
+            <h4>Degens Idle v0.86</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -313,9 +313,21 @@
             <div class="settings-section">
                 <h3>Gameplay Options</h3>
                 <div class="settings-buttons">
+                    <button id="automationButton" class="automation-button">
+                        Automation
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                    </button>
                     <button id="howToPlayButton"><i class="icon-info"></i> How to Play?</button>
                     <button id="numberFormatButton" class="full-width-button">Number Format: Mixed</button>
-                    <button id="automationButton" class="full-width-button">Automation</button> <!-- New Automation Button -->
                 </div>
             </div>
             
