--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             "keywords": "idle game, incremental game, free game, no ads, prestige, simulation, strategy, RPG, deep progression, unique challenges",
             "publisher": {
             "@type": "Person",
-            "name": "Sebastian"
+            "name": "Kuzzi"
             },
             "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "2000000"
+            "reviewCount": "42069"
             },
             "author": {
             "@type": "Person",
-            "name": "Sebastian"
+            "name": "Kuzzi"
             },
             "image": "https://www.degensidle.com/imgs/textures/character_icon.jpg",
             "operatingSystem": ["Windows", "macOS", "Linux", "Android", "iOS"],
@@ -168,9 +168,9 @@
             </div>
             <button id="prestigeButton" style="display:none;" class="custom-button">Prestige</button>
             <p class="prestige-multiplier-text" id="prestige-multiplier">Prestige: x1.00 mult</p>
-            <button id="ascendButton" style="display:none;" class="custom-button">Ascend Above Mortals</button>
+            <button id="ascendButton" style="display:none;" class="custom-button">ASCEND ABOVE MORTALS</button>
             <p class="god-mode-text" id="god-mode-display">God-Mode Level 0 (x1.00 mult)</p>
-            <button id="transcendButton" style="display:none;" class="custom-button">Parallel Transcend</button>
+            <button id="transcendButton" style="display:none;" class="custom-button">PARALLEL TRANSCEND</button>
             <p class="pu-god-text" id="pu-god-display" style="display:none;">PU God Level 0 (x1.00 mult)</p>
             <button id="bigCrunchButton" style="display:none;" class="custom-button">Big Crunch</button>
             <p class="big-crunch-text" id="big-crunch-display" style="display:none;">Big Crunch Power 1e-7 (x1.00 mult)</p>
@@ -296,7 +296,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.861</h4>
+            <h4>Degens Idle v0.862</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
