--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
             <span class="close-button" id="closeMessageModal">&times;</span>
             <h2 id="modalTitle"></h2>
             <p id="modalMessage"></p>
-            <img id="modalImage" src="" style="display: none; max-width: 100%; max-height: 1400px; margin: 10px 0;">
+            <img id="modalImage" src="" max-width: 100%; max-height: 1400px; margin: 10px 0;">
             <button id="modalCloseButton">Close</button>
-            <div id="modalConfirmButtons" style="display:none;">
+            <div id="modalConfirmButtons">
                 <button id="modalConfirmButton">Confirm</button>
                 <button id="modalCancelButton">Cancel</button>
             </div>
-            <div id="ascendUpgradeSelection" style="display:none;">
+            <div id="ascendUpgradeSelection">
                 <h3>Choose the upgrade you want to use as your ascension focal point - this will permanently enhance it to be 10x as strong:</h3>
                 <div id="ascendUpgradeList"></div>
                 <button id="upgradeConfirmButton" style="display:none;">Confirm Selection</button>
             </div>
-            <div id="gameInputSection" style="display:none;">
+            <div id="gameInputSection">
                 <input type="text" id="gameInput" placeholder="Your answer">
                 <button id="submitGameInputButton">Submit</button>
             </div>
@@ -296,7 +296,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.863</h4>
+            <h4>Degens Idle v0.864</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -387,5 +387,6 @@
     <script src="powerhall.js"></script>
     <script src="settings.js"></script>
     <script src="fighting.js"></script>
+    <script src="minigames.js"></script>
 </body>
 </html>
