--- a/index.html
+++ b/index.html
@@ -224,11 +224,15 @@
             <div class="player-section">
                 <div class="stats">
                     <p>Health: <span id="playerHealthStat"></span></p>
-                    <p>Damage: <span id="playerDamageStat"></span></p>
+                    <p>Dmg: <span id="playerDamageStat"></span></p>
                     <p>Speed: <span id="playerAttackSpeedStat"></span></p>
                     <p>Defense: <span id="playerDefenseStat"></span></p>
-                    <p>Crit Chance: <span id="playerCritChanceStat"></span></p>
-                    <p>Crit Damage: <span id="playerCritDamageStat"></span></p>
+                    <p id="playerCritChanceContainer">Crit: <span id="playerCritChanceStat"></span></p>
+                    <p id="playerCritDamageContainer">Crit Dmg: <span id="playerCritDamageStat"></span></p>
+                    <p id="playerDodgeContainer">Dodge: <span id="playerDodgeStat"></span></p>
+                    <p id="playerNonCritDodgeContainer">Non-Crit Dodge: <span id="playerNonCritDodgeStat"></span></p>
+                    <p id="playerStunContainer">Stun: <span id="playerStunStat"></span></p>
+                    <p id="playerAbsorbContainer">Absorb: <span id="playerAbsorbStat"></span></p>
                 </div>
                 <div id="playerImageContainer"></div>
                 <div class="health-bar">
@@ -245,11 +249,15 @@
             <div class="enemy-section">
                 <div class="stats">
                     <p>Health: <span id="enemyHealthStat"></span></p>
-                    <p>Damage: <span id="enemyDamageStat"></span></p>
+                    <p>Dmg: <span id="enemyDamageStat"></span></p>
                     <p>Speed: <span id="enemyAttackSpeedStat"></span></p>
                     <p>Defense: <span id="enemyDefenseStat"></span></p>
-                    <p>Crit Chance: <span id="enemyCritChanceStat"></span></p>
-                    <p>Crit Damage: <span id="enemyCritDamageStat"></span></p>
+                    <p id="enemyCritChanceContainer">Crit: <span id="enemyCritChanceStat"></span></p>
+                    <p id="enemyCritDamageContainer">Crit Dmg: <span id="enemyCritDamageStat"></span></p>
+                    <p id="enemyDodgeContainer">Dodge: <span id="enemyDodgeStat"></span></p>
+                    <p id="enemyNonCritDodgeContainer">Non-Crit Dodge: <span id="enemyNonCritDodgeStat"></span></p>
+                    <p id="enemyStunContainer">Stun: <span id="enemyStunStat"></span></p>
+                    <p id="enemyAbsorbContainer">Absorb: <span id="enemyAbsorbStat"></span></p>
                 </div>
                 <div id="enemyImageContainer"></div>
                 <div class="health-bar">
