--- a/index.html
+++ b/index.html
@@ -300,10 +300,13 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.869</h4>
+            <h4>Degens Idle v0.87</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
+                <p style="font-weight: bold;">
+                    ⚠️ Warning: The file save function is currently extremely buggy. Please rely on the local save in your browser in the meantime.
+                </p>
                 <div class="settings-buttons">
                     <button id="exportSaveButton">
                         <img src="imgs/textures/download.png" alt="Download Icon"> Export Save
