--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="settings-section">
                 <h3>Save Management</h3>
                 <p style="font-weight: bold;">
-                    ⚠️ Warning: The file save function is currently extremely buggy. Please rely on the local save in your browser in the meantime.
+                    ⚠️ Warning: The file save function is currently buggy. Local save in your browser is more reliable.
                 </p>
                 <div class="settings-buttons">
                     <button id="exportSaveButton">
