--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                     <span class="cookieTooltip">Each cookie click counts as 10 clicks on collect buttons for Copium, Delusion, Yacht Money, and Troll Points!</span>
                 </button>
             </div>
+            <p class="stellar-harvest-text" id="stellar-harvest-display" style="display:none;">Stellar Harvest Mult x1.00</p>
             <button id="prestigeButton" style="display:none;" class="custom-button">Prestige</button>
             <p class="prestige-multiplier-text" id="prestige-multiplier">Prestige: x1.00 mult</p>
             <button id="ascendButton" style="display:none;" class="custom-button">ASCEND ABOVE MORTALS</button>
@@ -300,7 +301,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.873</h4>
+            <h4>Degens Idle v0.874</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
