--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p class="per-second">Hopium per second: <span id="hps">0</span></p>
                 <!-- No collect button for Hopium -->
             </div>
-            <div class="resource" id="knowledge-container" style="display: none;">
+            <div class="resource">
                 <p><b>K</b>nowledge: <span id="knowledge" class="resource-value">0</span></p>
                 <p class="per-second">Knowledge per second: <span id="kps">0</span></p>
             </div>
@@ -224,7 +224,7 @@
             <!-- Player Stats and Image -->
             <div class="player-section">
                 <div class="stats">
-                    <p>Health: <span id="playerHealthStat"></span></p>
+                    <p>Max Health: <span id="playerHealthStat"></span></p>
                     <p>Dmg: <span id="playerDamageStat"></span></p>
                     <p>Speed: <span id="playerAttackSpeedStat"></span></p>
                     <p>Defense: <span id="playerDefenseStat"></span></p>
@@ -301,7 +301,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.874</h4>
+            <h4>Degens Idle v0.875</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
