--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="powerhall.css">    
     <link rel="stylesheet" href="settings.css">
     <link rel="stylesheet" href="fighting.css">
+    <link rel="stylesheet" href="achievements.css">
     <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet"> <!-- Google Font -->
 </head>
 <body>
@@ -84,9 +85,10 @@
                 <!-- Background image is now handled via CSS -->
             </div>
             <div id="button-container">
-                <button id="restartButton">Restart Entire Game</button>
-                <button id="restartPrestige">Restart This Prestige</button>
                 <button id="settingsButton">Settings</button>
+                <button id="achievementsButton">Achievements</button>
+                <button id="restartPrestige">Restart This Prestige</button>
+                <button id="restartButton">Restart Entire Game</button>
             </div>
         </div>
         <div id="game">
@@ -218,6 +220,7 @@
         </div>
     </div>
     <div id="statusOverlay" class="status-overlay"></div>
+    <div id="popup-tooltip" class="hidden-popup-tooltip"></div>
     <!-- Fighting Mini-Game Overlay -->
     <div id="fightingOverlay" class="fighting-overlay" style="display: none;">
         <div class="fighting-overlay-content">
@@ -301,7 +304,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.877</h4>
+            <h4>Degens Idle v0.878</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -371,9 +374,19 @@
         </div>
     </div>
 
-
-
-
+    <!-- Achievements Overlay -->
+    <div id="achievementsOverlay" class="achievements-overlay" style="display: none;">
+        <div class="achievements-overlay-content">
+            <span class="close-button" id="closeAchievementsOverlay">&times;</span>
+            <h1>Achievements</h1>
+            <h3>(currently a work in progress - will populate more achievements in the next few days)</h3>
+            <div id="achievements-info">Achievements Unlocked: 0/100 | Multiplier: 1.00x</div>
+            <div id="achievements-grid">
+                <!-- Achievements will be dynamically added here -->
+            </div>
+            <button id="closeAchievementsButton">Exit</button>
+        </div>
+    </div>
 
     <!-- Donation Overlay -->
     <div id="donationOverlay" class="donation-overlay" style="display: none;">
@@ -396,5 +409,6 @@
     <script src="settings.js"></script>
     <script src="fighting.js"></script>
     <script src="minigames.js"></script>
+    <script src="achievements.js"></script>
 </body>
 </html>
