--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <option value="hopium">Hopium</option> <!-- Add Hopium as a tradeable resource -->
                 </select>
                 <label for="tradeAmount">Amount:</label>
-                <input type="text" id="tradeAmount" value="" placeholder="Enter (e.g. 1.5M or 50%)">
+                <input type="text" id="tradeAmount" value="" placeholder="Enter (e.g. 1.5M or 50%)" style="font-size: 16px;">                
                 <p id="tradeRatioDisplay">Trade ratio is 10:1</p>
                 <button id="tradeButton">Trade</button>
                 <button id="tradeTenPercentButton">Trade 10%</button>
