--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.884</h4>
+            <h4>Degens Idle v0.9</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
-                <p style="font-weight: bold;">
-                    ⚠️ Warning: The file save function is currently buggy. Local save in your browser is more reliable.
+                <p>
+                    Exporting your game will save a file to your Downloads folder. When importing, a backup of your current save will also be saved to your Downloads folder before loading the chosen file.
                 </p>
                 <div class="settings-buttons">
                     <button id="exportSaveButton">
