--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span class="close-button" id="closeMessageModal">&times;</span>
             <h2 id="modalTitle"></h2>
             <p id="modalMessage"></p>
-            <img id="modalImage" src="" max-width: 100%; max-height: 1400px; margin: 10px 0;">
+            <img id="modalImage" src="" alt="Modal Image">
             <button id="modalCloseButton">Close</button>
             <div id="modalConfirmButtons">
                 <button id="modalConfirmButton">Confirm</button>
@@ -69,7 +69,7 @@
                 <button id="upgradeConfirmButton" style="display:none;">Confirm Selection</button>
             </div>
         </div>
-    </div>    
+    </div>      
     <!-- Immediate Message Modal -->
     <div id="immediateMessageModal" class="modal">
         <div class="modal-content">
@@ -304,7 +304,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.9</h4>
+            <h4>Degens Idle v0.901</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
