--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.904</h4>
+            <h4>Degens Idle v0.905</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -379,8 +379,7 @@
         <div class="achievements-overlay-content">
             <span class="close-button" id="closeAchievementsOverlay">&times;</span>
             <h1>Achievements</h1>
-            <h3>(currently a work in progress - will populate more achievements in the next few days)</h3>
-            <div id="achievements-info">Achievements Unlocked: 0/100 | Multiplier: 1.00x</div>
+            <div id="achievements-info">Achievements Unlocked: 0/100 | Multiplier: 1.00x (to ALL RESOURCES)</div>
             <div id="achievements-grid">
                 <!-- Achievements will be dynamically added here -->
             </div>
