--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div id="meditationStats" class="meditation-info">
                     <div class="stat-row">
                         <p>Time: <span id="meditationTimer" class="stat-value"></span></p>
-                        <p>Lives: <span id="meditationLives" class="stat-value"></span></p>
+                        <p>Focus: <span id="meditationFocus" class="stat-value"></span></p>
                     </div>
                     <div class="stat-row">
                         <p># of Balls: <span id="meditationBallCount" class="stat-value"></span></p>
@@ -354,8 +354,13 @@
         <div class="lovehall-overlay-content">
             <span class="close-button" id="closeLoveHallOverlay">&times;</span>
             <h1>HALL OF LOVE</h1>
-            <h4>Welcome to the Hall of Love, where you have found that love and serenity are the keys to life’s true balance. As you continue to grow in love, you discover that harmony is the foundation of all things. The skills here are purchased using love points, which you acquire each time you perform an Infinite Embrace. These skills are entangled forces within three pillars of balance. For every skill you purchase, its entangled counterpart becomes more costly, reinforcing the delicate equilibrium between growth and sacrifice. In the first pillar, this increase is tenfold, in the second, one hundredfold, and in the third, one thousandfold. Choose wisely, for balance is the ultimate lesson of love.</h4>
-            <!-- More visible Love Points display -->
+            <h4>
+                You’ve discovered that love and serenity are the keys to life’s true balance. The skills here are purchased using <strong>Love Points</strong>, which you acquire each time you perform an <strong>Infinite Embrace</strong>. These skills are entangled forces within three pillars of balance. For every skill you purchase, its entangled counterpart becomes more costly, reinforcing the delicate equilibrium between growth and sacrifice.
+                <br><br>
+                In the <strong>first pillar</strong>, the cost increases by <strong>2.8 times</strong>—reflecting the quantum nature of the universe, as 2 * sqrt(2) represents Bell’s Inequality for quantum entangled particle correlation. In the <strong>second pillar</strong>, the increase is <strong>27 times</strong>, symbolizing the 27 dimensions of string theory. The <strong>third pillar</strong> magnifies the cost by <strong>42 times</strong>, an homage to the ultimate answer to life, the universe, and everything.
+                <br><br>
+                Choose wisely, for balance is the ultimate lesson of love.
+            </h4>            <!-- More visible Love Points display -->
             <div id="lovePointsDisplay">
                 Love Points: 0
             </div>
@@ -372,7 +377,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.911</h4>
+            <h4>Degens Idle v0.912</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
