--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
             </div>
             <div class="resource">
                 <p><b>H</b>opium: <span id="hopium" class="resource-value">0</span></p>
-                <p class="per-second">Hopium per second: <span id="hps">0</span></p>
+                <p class="per-second">Hopium per second: <span id="hps">0</span>
+                    <label class="switch hidden" id="toggleHopiumLabel">
+                        <input type="checkbox" id="toggleHopium">
+                        <span class="slider"></span>
+                    </label>
+                </p>
                 <!-- No collect button for Hopium -->
             </div>
             <div class="resource">
@@ -178,6 +183,7 @@
             <p class="pu-god-text" id="pu-god-display" style="display:none;">PU God Level 0 (x1.00 mult)</p>
             <button id="bigCrunchButton" style="display:none;" class="custom-button">Big Crunch</button>
             <p class="big-crunch-text" id="big-crunch-display" style="display:none;">Big Crunch Power 1e-7 (x1.00 mult)</p>
+            <button id="infiniteEmbraceButton" style="display:none;" class="custom-button">Infinite Embrace</button>
             <button id="libraryButton">Hall of Knowledge</button>
             <button id="powerHallButton" style="display:none;">Hall of Power</button>     
             <button id="loveHallButton" style="display:none;">Hall of Love</button>         
@@ -359,7 +365,7 @@
                 <br><br>
                 In the <strong>first pillar</strong>, the cost increases by <strong>2.8 times</strong>—reflecting the quantum nature of the universe, as 2 * sqrt(2) represents Bell’s Inequality for quantum entangled particle correlation. In the <strong>second pillar</strong>, the increase is <strong>27 times</strong>, symbolizing the 27 dimensions of string theory. The <strong>third pillar</strong> magnifies the cost by <strong>42 times</strong>, an homage to the ultimate answer to life, the universe, and everything.
                 <br><br>
-                Choose wisely, for balance is the ultimate lesson of love.
+                <span style="color: red;">Choose wisely, for balance is the ultimate lesson of love.</span>
             </h4>            <!-- More visible Love Points display -->
             <div id="lovePointsDisplay">
                 Love Points: 0
@@ -377,7 +383,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.912</h4>
+            <h4>Degens Idle v0.913</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
