--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="library-overlay-content">
             <span class="close-button" id="closeLibraryOverlay">&times;</span>
             <h1>Hall of Knowledge</h1>
-            <h4>Welcome to the illustrious Hall of Knowledge, a revered sanctuary where the wisdom of ages is preserved and shared. Within these hallowed halls, you will discover an array of skills and insights, each meticulously curated to empower your journey.<br><br>Every skill you acquire here is a beacon of enlightenment, and its benefits are everlasting. These skills are designed to endure, persisting across all prestiges, ascensions, and whatever challenges or triumphs the future may hold. Embrace the permanence of your newfound wisdom, for it will remain with you as a steadfast guide, lighting your path through every stage of your odyssey.</h4>
+            <h4>Welcome to the illustrious Hall of Knowledge, a revered sanctuary where the wisdom of ages is preserved and shared. Within these hallowed halls, you will unlock a wealth of skills and insights, each meticulously curated to empower your journey.<br><br>Every skill you acquire here is a beacon of enlightenment, enduring through prestiges, ascensions, and beyond—though some forces may still challenge their permanence. Embrace the journey and let your wisdom guide you through every stage of your odyssey.</h4>
             <div id="librarySkills">
                 <!-- Skills will be dynamically added here -->
             </div>
@@ -349,7 +349,7 @@
         <div class="powerhall-overlay-content">
             <span class="close-button" id="closePowerHallOverlay">&times;</span>
             <h1>HALL OF POWER</h1>
-            <h4>Welcome to the Hall of Power, a place where the strongest beings from countless realities converge. Nestled between the threads of the megaverse, this market of might is unlike anything you've ever encountered. Here, the air crackles with energy as warriors, sorcerers, and cosmic entities barter and trade not for trinkets, but for raw power itself.<br><br>                Each skill you master within these hallowed grounds is a key to unlocking the primordial forces that bind the megaverse together. As you hone your abilities, you’ll find yourself ascending through challenges that test the limits of your strength, pushing you ever closer to the ultimate power that echoes through every universe and dimension.</h4>
+            <h4>Welcome to the Hall of Power, a place where the strongest beings from countless realities converge. Nestled between the threads of the megaverse, this market of might is unlike anything you've ever encountered. Here, the air crackles with energy as warriors, sorcerers, and cosmic entities barter and trade not for trinkets, but for raw power itself.<br><br>Each skill you master within these hallowed grounds is a key to unlocking the primordial forces that bind the megaverse together. As you hone your abilities, you’ll find yourself ascending through challenges that test the limits of your strength, pushing you ever closer to the ultimate power that echoes through every universe and dimension.</h4>
             <div id="powerHallSkills">
                 <!-- Power skills will be dynamically added here -->
             </div>
@@ -383,7 +383,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.917</h4>
+            <h4>Degens Idle v0.918</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
