--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.922</h4>
+            <h4>Degens Idle v0.923</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
                 <p>
-                    Exporting your game will save a file to your Downloads folder. (Currently does not work on mobile)
+                    Exporting your game will save a file to your Downloads folder. (Currently may have issues on mobile)
                 </p>
                 <div class="settings-buttons">
                     <button id="exportSaveButton">
