--- a/index.html
+++ b/index.html
@@ -91,9 +91,21 @@
             </div>
             <div id="button-container">
                 <button id="settingsButton">Settings</button>
+                <button id="automationButton" class="automation-button">
+                        Automation
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                </button>
                 <button id="achievementsButton">Achievements</button>
                 <button id="restartPrestige">Restart This Prestige</button>
-                <button id="restartButton">Restart Entire Game</button>
             </div>
         </div>
         <div id="game">
@@ -419,20 +431,8 @@
             
             <div class="settings-section">
                 <h3>Gameplay Options</h3>
-                <div class="settings-buttons">
-                    <button id="automationButton" class="automation-button">
-                        Automation
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                        <div class="square"></div>
-                    </button>
+                <div class="settings-buttons
+                    <button id="restartButton">Restart Entire Game</button>
                     <button id="howToPlayButton"><i class="icon-info"></i> How to Play?</button>
                     <button id="numberFormatButton" class="full-width-button">Number Format: Mixed</button>
                 </div>
