Add Settings to toggle On/Off Glowing Animations

--- a/index.html
+++ b/index.html
@@ -436,10 +436,17 @@
                     <button id="howToPlayButton"><i class="icon-info"></i> How to Play?</button>
                     <button id="numberFormatButton" class="full-width-button">Number Format: Mixed</button>
                 </div>
-                <div class="settings-switch">
+                <div class="settings-switch" style="margin-bottom: 10px;">
                     <label for="enableQuickMode">Quick mode : Skip all confirmation pop-up</label>
                     <label class="switch">
                         <input type="checkbox" id="enableQuickMode">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="settings-switch" style="margin-bottom: 10px;">
+                    <label for="enableButtonAnimations">Glowing Animations</label>
+                    <label class="switch">
+                        <input type="checkbox" id="enableButtonAnimations">
                         <span class="slider"></span>
                     </label>
                 </div>
