--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.926</h4>
+            <h4>Degens Idle v0.9261</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -437,14 +437,14 @@
                     <button id="numberFormatButton" class="full-width-button">Number Format: Mixed</button>
                 </div>
                 <div class="settings-switch" style="margin-bottom: 10px;">
-                    <label for="enableQuickMode">Quick mode : Skip all confirmation pop-up</label>
+                    <label for="enableQuickMode">Quick mode : Skip all confirmation pop-ups</label>
                     <label class="switch">
                         <input type="checkbox" id="enableQuickMode">
                         <span class="slider"></span>
                     </label>
                 </div>
                 <div class="settings-switch" style="margin-bottom: 10px;">
-                    <label for="enableButtonAnimations">Glowing Animations</label>
+                    <label for="enableButtonAnimations">Glowing Animations (CPU intensive)</label>
                     <label class="switch">
                         <input type="checkbox" id="enableButtonAnimations">
                         <span class="slider"></span>
