--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Testing: The fight against shitty code</title>
+    <title>Degens Testing</title>
     <meta name="description" content="Immerse yourself in Degens Idle, the ultimate strategy-based idle game with deep and unique progression systems. Unlock powerful upgrades, navigate intricate prestige layers, and make challenging decisions that shape your journey. No ads, no paywalls—just pure strategic gameplay.">
     <meta name="keywords" content="Degens Idle, idle game, incremental game, free idle game, no ads game, prestige layers, simulation, strategy, deep progression, unique challenges, strategic gameplay, resource management, RPG elements, upgrade systems, skill tree, incremental strategy, browser game, no paywalls, strategic decision-making, idle RPG, challenging gameplay">
     <!-- Include the JSON-LD structured data -->
